Javaスタンダード第11回演習課題「年齢が30代の人のみを絞り込み検索する」