@@ -1,12 +1,11 @@
 package raisetech.StudentManagement.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import raisetech.StudentManagement.data.Student;
 import raisetech.StudentManagement.data.StudentsCourses;
-import raisetech.StudentManagement.repositry.StudentRepository;
+import raisetech.StudentManagement.repository.StudentRepository;
 
 @Service
 public class StudentService {
@@ -19,12 +18,13 @@ public class StudentService {
   }
 
   public List<Student> searchStudentList() {
-    /* 検索処理
-    repository.search();*/
-    // 絞り込みをして、年齢が30代の人のみ抽出する。抽出したリストをControllerに返す。
+    return repository.search();
+  }
+
+  // 絞り込みをして、年齢が30代の人のみ抽出する。抽出したリストをControllerに返す。
+  public List<Student> search30yearsOldStudentList() {
     return repository.search().stream()
-        .filter(student -> student.getAge() >= 30 && student.getAge() < 40)
-        .collect(Collectors.toList());
+        .filter(student -> student.getAge() >= 30 && student.getAge() <= 39).toList();
   }
 
   public List<StudentsCourses> searchStudentsCoursesList() {
@@ -32,5 +32,6 @@ public class StudentService {
     return repository.searchStudentsCourses().stream()
         .filter(studentsCourses -> "Javaコース".equals(studentsCourses.getCourseName()))
         .collect(Collectors.toList());
+    return repository.searchStudentsCourses();
   }
 }
